--- a/cart/package.json
+++ b/cart/package.json
@@ -11,16 +11,21 @@
     "serve": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@module-federation/vite": "^1.9.0",
     "@originjs/vite-plugin-federation": "^1.4.1",
     "@reduxjs/toolkit": "2.3.0",
+    "ag-grid-community": "^34.3.1",
+    "ag-grid-react": "^34.3.1",
+    "antd": "^5.28.1",
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "9.1.2",
     "react-router": "6.28.0",
     "react-router-dom": "6.28.0",
-    "redux-persist": "6.0.0"
+    "redux-persist": "6.0.0",
+    "sass": "^1.94.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
