--- a/container/package.json
+++ b/container/package.json
@@ -21,6 +21,8 @@
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.66.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "9.1.2",
     "react-router": "6.28.0",
     "react-router-dom": "6.28.0",
