--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,8 @@
     "antd": "^5.28.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.66.0",
+    "react-phone-input-2": "^2.15.1",
     "sass": "^1.94.0"
   },
   "devDependencies": {
